# libudjatcivetweb

./: .gitignore  .lgtm.yml  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  civetweb.cbp  configure.ac  link.sh  meson.build  test.xml  valgrind.suppression
.github/workflows/: codeql.yml  msys2.yml  publish.yml
conf/: 50-civetweb.conf
conf.d/: 50-civetweb.conf  90-oauth.conf
debian/: changelog  control  libudjatcivetweb.dsc  rules  shlibs  shlibs.in  udjat-module-civetweb.dsc
locale/: pt_BR.po  udjat-module-civetweb.pot
po/: POTFILES.in  pt_BR.po
rpm/: _service  _servicedata  libudjatcivetweb.spec  mingw64-libudjatcivetweb.spec  udjat-module-civetweb.spec
sdk/: module.pc.in
sdk/linux/: dynamic.pc.in
sdk/windows/: static.pc.in
src/: init.cc
src/include/: config.h.in  report.h  response.h  tools.h
src/include/private/: connection.h  module.h  request.h
src/include/udjat/: civetweb.h
src/include/udjat/module/: civetweb.h
src/include/udjat/tools/civetweb/: interface.h  protocol.h  service.h
src/include/udjat/tools/http/: connection.h  handler.h  icon.h  icons.h  image.h  keypair.h  layouts.h  oauth.h  report.h  request.h  response.h  server.h  template.h  value.h
src/module/: api.cc  connection.cc  custom.cc  download.cc  error_page.cc  factory.cc  handler.cc  header.cc  icons.cc  images.cc  index.cc  info.cc  init.cc  interface.cc  private.h  protocol.cc  report.cc  request.cc  response.cc  send.cc  service.cc  states.cc  swagger.cc  tools.cc  urlresponse.cc  value.cc  worker.cc
src/module/handlers/: api.cc  favicon.cc  icons.cc  images.cc  oauth.cc  product.cc  pubkey.cc  report.cc  root.cc  states.cc  swagger.cc
src/module/layout/: json.cc  xml.cc
src/module/oauth2/: handler.cc
src/module/report/: handler.cc  json.cc  report.cc
src/module/service/: construct.cc  send.cc
src/module/worker/: get.cc  test.cc  worker.cc
src/testprogram/: testprogram.cc
templates/: error.html  login.html
test/: get-as-svg.sh  oauth2-client.py
win/: mingw64-udjat-civetweb.spec
win/x86_64/: CHANGELOG  mingw64-udjat-civetweb.spec
